Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124459

qmlls: no completions after "id." when components are not bound

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.7.1, 6.8.0 FF, 6.8
    • 6.8
    • QML: Tooling
    • None
    • 1bcb8587a (dev), 6fd68ab3f (6.7)

      qmlls provides no completion for properties and methods inside of ids when components are not bound (e.g. the pragma is not set, for example), see also the attached file.{}

       

      Instead, it should provide completions even for ids that are technically invisible, and later warn that those id's require the use of the "components are bound"-pragma.

        For Gerrit Dashboard: QTBUG-124459
        # Subject Branch Project Status CR V

            sami.shalayel Sami Shalayel
            sami.shalayel Sami Shalayel
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes