qmlls: assume bound identifiers in completions

Add a new option flag to QmlTypeResolver to allow resolving id's while
assuming that Components are bounds (even if they are currently not
bound). This allows qmlls to provide completions even if the user forgot
to set the pragma, instead of not suggesting anything at all after
"someIdThatIsOnlyVisibleWhenComponentsAreBound.".

Fixes: QTBUG-124459
Change-Id: I658c2f5d678f94f99a94a9e06aaf6d19db9b1147
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 1bcb8587ab6b7068d1af8897804820853e7bc9d0)
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>